--- a/index.html
+++ b/index.html
@@ -44,9 +44,6 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light fixed-top shadow py-lg-0 px-4 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
-        <a href="https://github.com/Happinesspetra" class="navbar-brand d-block d-lg-none">
-            <h1 class="text-primary fw-bold m-0">HappiBo.</h1>
-        </a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -56,7 +53,8 @@
                 <a href="#about" class="nav-item nav-link">About</a>
                 <a href="#skill" class="nav-item nav-link">Skills</a>
                 <a href="#service" class="nav-item nav-link">Services</a>
-            </div><a href="https://github.com/Happinesspetra" class="navbar-brand" style="background-color: #e0f7fa; padding: 0.75rem 1rem; margin: 0 0.75rem;">
+            </div>
+            <a href="https://github.com/Happinesspetra" class="navbar-brand d-none d-lg-block" style="background-color: #e0f7fa; padding: 0.75rem 1rem; margin: 0 0.75rem;">
                 <h1 class="text-primary fw-bold m-0">HappiBo.</h1>
             </a>
             
