--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -44,6 +45,9 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light fixed-top shadow py-lg-0 px-4 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
+        <a href="https://github.com/Happinesspetra" class="navbar-brand d-block d-lg-none">
+            <h1 class="text-primary fw-bold m-0">HappiBo.</h1>
+        </a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -54,7 +58,7 @@
                 <a href="#skill" class="nav-item nav-link">Skills</a>
                 <a href="#service" class="nav-item nav-link">Services</a>
             </div>
-            <a href="https://github.com/Happinesspetra" class="navbar-brand d-none d-lg-block" style="background-color: #e0f7fa; padding: 0.75rem 1rem; margin: 0 0.75rem;">
+               <a href="https://github.com/Happinesspetra" class="navbar-brand bg-secondary py-3 px-4 mx-3 d-none d-lg-block">
                 <h1 class="text-primary fw-bold m-0">HappiBo.</h1>
             </a>
             
