--- a/index.html
+++ b/index.html
@@ -250,28 +250,28 @@
                     <div id="tab-1" class="tab-pane fade show active p-0">
                         <div class="row gy-5 gx-4">
                             <div class="col-sm-6">
-                                <h5>UI Designer</h5>
+                                <h5>Web Developer</h5>
                                 <hr class="text-primary my-2">
-                                <p class="text-primary mb-1">2000 - 2045</p>
-                                <h6 class="mb-0">Apex Software Inc</h6>
+                                <p class="text-primary mb-1">2022 - Present</p>
+                                <h6 class="mb-0">Freelance</h6>
                             </div>
                             <div class="col-sm-6">
-                                <h5>Product Designer</h5>
+                                <h5>Web Developer</h5>
                                 <hr class="text-primary my-2">
-                                <p class="text-primary mb-1">2000 - 2045</p>
-                                <h6 class="mb-0">Apex Software Inc</h6>
+                                <p class="text-primary mb-1">2023 - 2024</p>
+                                <h6 class="mb-0">Lovevfx studios</h6>
                             </div>
                             <div class="col-sm-6">
-                                <h5>Web Designer</h5>
+                                <h5>Frontend Developer</h5>
                                 <hr class="text-primary my-2">
-                                <p class="text-primary mb-1">2000 - 2045</p>
-                                <h6 class="mb-0">Apex Software Inc</h6>
+                                <p class="text-primary mb-1">2024 - Present</p>
+                                <h6 class="mb-0">Briofy</h6>
                             </div>
                             <div class="col-sm-6">
-                                <h5>Apps Designer</h5>
+                                <h5>Graphics Designer</h5>
                                 <hr class="text-primary my-2">
-                                <p class="text-primary mb-1">2000 - 2045</p>
-                                <h6 class="mb-0">Apex Software Inc</h6>
+                                <p class="text-primary mb-1">2024 - Present</p>
+                                <h6 class="mb-0">Personal Projects</h6>
                             </div>
                         </div>
                     </div>
@@ -818,7 +818,6 @@
                         &copy; 2025, All Right Reserved.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
-                        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
                         Developed By <a class="border-bottom text-secondary" href="https://happi-bo-porfolio.vercel.app">HappiBo</a>
                     </div>
                 </div>
